// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> When size modifier equals \`large\` should render properly 1`] = `
.c0 {
  height: 256px;
  width: 256px;
}

<img
  alt="image sample"
  class="c0"
/>
`;

exports[`<Image /> When size modifier equals \`medium\` should render properly 1`] = `
.c0 {
  height: 64px;
  width: 64px;
}

<img
  alt="image sample"
  class="c0"
/>
`;

exports[`<Image /> When size modifier equals \`responsive\` should render properly 1`] = `
.c0 {
  width: 100%;
  height: auto;
}

<img
  alt="image sample"
  class="c0"
/>
`;

exports[`<Image /> When size modifier equals \`small\` should render properly 1`] = `
.c0 {
  height: 32px;
  width: 32px;
}

<img
  alt="image sample"
  class="c0"
/>
`;
